--- a/ceph/ceph.conf
+++ b/ceph/ceph.conf
@@ -18,3 +18,12 @@
     osd_pool_default_pg_num = 33
     osd_pool_default_pgp_num = 33
     osd_crush_chooseleaf_type = 1
+
+[client.radosgw.gateway]
+host = 172.19.2.97
+keyring = /etc/ceph/ceph.client.radosgw.keyring
+log file = /var/log/radosgw/client.radosgw.gateway-node2.log
+rgw_frontends = civetweb port=80
+
+
+
